fixes for group type overflow

--- a/apps/docs/src/app/core/component-docs/avatar-group/examples/avatar-group-group-type-example.component.scss
+++ b/apps/docs/src/app/core/component-docs/avatar-group/examples/avatar-group-group-type-example.component.scss
@@ -1,6 +1,7 @@
 .fd-avatar-group--group-type__overflow-popover-body--custom-class {
     .fd-popover__wrapper {
         max-width: 312px;
+        overflow-x: hidden;
     }
 
     .fd-avatar-group__item {
